[package]
name = "libtriptych"
version = "0.1.0"
edition = "2018"
authors = [
    "Pradipta Bora <pradiptabora@cse.iitb.ac.in>"
]
description = "Triptych Log Sized Ring Signatures Crate for Rust"
readme = "README.md"
repository = "https://github.com/geekpradd/libtriptych-rust"
license = "MIT"



[dependencies]
#curve25519-dalek = "3"
curve25519-dalek = { git = "https://github.com/mobilecoinfoundation/curve25519-dalek.git", rev = "8791722e0273762552c9a056eaccb7df6baf44d7" }
sha2 = "0.10.2"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "signature_bench"
harness = false